# alexa_api

./: .gitignore  LICENSE.txt  README.md  alert_handler.py  alexa_remote_control.py  pyproject.toml  trigger_alert.py
.github/workflows/: release.yml
src/alexa_api/: __about__.py  __init__.py  main.py  test.py
tests/: __init__.py
