[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alexa-api"
description = ''
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wlicb", email = "71507674+wlicb@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests"
]

[project.urls]
Documentation = "https://github.com/neuhai/alexa_api#readme"
Issues = "https://github.com/neuhai/alexa_api/issues"
Source = "https://github.com/neuhai/alexa_api"

[tool.hatch.version]
path = "src/alexa_api/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/alexa_api tests}"

[tool.coverage.run]
source_pkgs = ["alexa_api", "tests"]
branch = true
parallel = true
omit = [
  "src/alexa_api/__about__.py",
]

[tool.coverage.paths]
alexa_api = ["src/alexa_api", "*/alexa-api/src/alexa_api"]
tests = ["tests", "*/alexa-api/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]